@@ -10,8 +10,8 @@ class ClinkTestCase : public CPPUNIT_NS::TestFixture
   CPPUNIT_TEST( testDictionary );
   CPPUNIT_TEST( testURI );
   CPPUNIT_TEST( testNetworkInterface );
-  //CPPUNIT_TEST( testHttpServer );
-  //CPPUNIT_TEST( testDevice );
+  CPPUNIT_TEST( testHttpServer );
+  CPPUNIT_TEST( testDevice );
   //CPPUNIT_TEST( testControlPoint );
   CPPUNIT_TEST( testSubscription );
 
